<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="homeViewModel"
            type="com.inabil.HomeActivityViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{homeViewModel.fname}"
                    android:textColor="@android:color/black"
                    tools:text="@string/app_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@{homeViewModel.lname}"
                    android:textColor="@android:color/black"
                    tools:text="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{homeViewModel.mNo}"
                        android:textColor="@android:color/black" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:background="@color/colorPrimary"
                        android:onClick="@{homeViewModel::onMobileEdit}"
                        android:text="@string/edit"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:onClick="@{homeViewModel::onUserType}"
                    android:padding="5dp"
                    android:text="@string/user_type"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/logout_icon"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:onClick="@{homeViewModel::onLogout}"
                    android:padding="5dp"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:clickable="true"
            android:visibility="@{homeViewModel.isHomeLoading ? View.VISIBLE:View.GONE}"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center" />
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>